# BananaLecture

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  example.md  nginx.conf
.github/workflows/: build.yaml
backend/: .env.example  .gitignore  config.yaml  pyproject.toml
backend/app/: __init__.py  __main__.py  config.py
backend/app/api/: audio.py  config.py  export.py  pdf.py  projects.py  scripts.py  tasks.py
backend/app/config/: audio_group.json  audio_setting.json
backend/app/core/: audio_client.py  dependencies.py  exceptions.py  path_manager.py  script_client.py
backend/app/models/: __init__.py  base.py  config.py  dialogue.py  enums.py  project.py  task.py
backend/app/services/: __init__.py  audio_service.py  config_service.py  export_service.py  pdf_service.py  project_service.py  script_service.py  task_service.py
backend/app/utils/: file_utils.py
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: MainLayout.tsx  Sidebar.css  Sidebar.tsx
frontend/src/components/project/: ProjectCard.tsx  ProjectForm.tsx  ProjectList.tsx  index.ts
frontend/src/services/: api.ts  audioService.ts  configService.ts  index.ts  projectService.ts  scriptService.ts  taskService.ts
frontend/src/stores/: configStore.ts  index.ts  projectStore.ts  taskStore.ts
frontend/src/styles/: PageView.css  homePage.css  project.css
frontend/src/types/: audio.ts  config.ts  index.ts  project.ts  script.ts  task.ts
(+11 files in other folders)
